# candid

./: .pre-commit-config.yaml  Makefile  README.md  alembic.ini  cloudbuild.yaml  env.sh  env_template.sh  pyproject.toml  setup.cfg  setup.py
alembic/: env.py
alembic/versions/: 1bd58ba1261c_add_politician_relationship_to_party_.py  587cd3f0b770_create_politicians_table.py  7e472d91f21a_add_political_party_and_political_body.py
candid_api/: Dockerfile  README.md  cloudbuild.yaml  test_fastapi.py
db/: README.md  alembic.ini  database.py  models.py
db/alembic/versions/: 587cd3f0b770_create_politicians_table.py
docker/candid_api/: Dockerfile
scripts/: build-docker.sh
src/candid_api/: .Dockerfile.swp  README.md  gunicorn_config.py  requirements.txt  test_fastapi.py
tests/candid_api/: test_server.py
